force-app/main/default/objects/CK_Stage_Tracker_Settings__mdt/CK_Stage_Tracker_Settings__mdt.object-meta.xml
<CustomObject>
    <description>The settings that define the Stage Tracking for each object that is being tracked. You can turn on and off tracking through this metadata</description>
    <label>Stage Tracker Setting</label>
    <pluralLabel>Stage Tracker Settings</pluralLabel>
</CustomObject>