force-app/main/default/objects/CK_Stage_Tracker_Settings__mdt/fields/Stage_Status_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Status_Api_Name__c</fullName>
    <description>Api name of the field being tracked by stage tracker</description>
    <inlineHelpText>Incorrect names will cause apex errors around saving this object. Ensure the name includes __c if it is a custom field you are tracking.</inlineHelpText>
    <label>Stage/Status Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>