force-app/main/default/objects/CK_Stage_Tracker_Settings__mdt/fields/Sync_Deletes_Undeletes__c.field-meta.xml
<CustomField>
    <fullName>Sync_Deletes_Undeletes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to indicate this object is syncing it&apos;s deletes and undeletes with the related stage tracker object</description>
    <inlineHelpText>Unchecking this field could leave floating stage tracker records. It is recommended to always leave this on</inlineHelpText>
    <label>Sync Deletes/Undeletes</label>
    <type>Checkbox</type>
</CustomField>