force-app/main/default/objects/CK_Stage_Tracker_Settings__mdt/fields/Track_Changes__c.field-meta.xml
<CustomField>
    <fullName>Track_Changes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to indicate the object has it&apos;s status/stage being tracked</description>
    <label>Track Changes</label>
    <type>Checkbox</type>
</CustomField>